--- a/rusty-util/DEBIAN/control
+++ b/rusty-util/DEBIAN/control
@@ -2,7 +2,7 @@ Package: rusty-util
 Version: 1.0-1
 Section: base
 Priority: optional
-Architecture: x86-64
+Architecture: amd64
 Depends: coreutils (>= 5.0-5)
 Maintainer: Eulegang <eulegang@eulegang.dev>
 Description: basic package for installing
